fixed header title off-center

--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,8 @@ body {
         .header-title-container {
             .image {
                 .overlay-image {
+                    height: 100%;
+                    width: 100%;
                     mix-blend-mode: overlay;
                     opacity: 0.82;
                 }
